--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -65,11 +65,25 @@ pip install logging
 pip install fabric
 pip install paramiko
 
+################ install mongodb  ############################
 
+cat > /etc/yum.repos.d/10gen.repo <<EOF
+[10gen]
+name=10gen Repository
+baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/x86_64
+gpgcheck=0
+enabled=1
+EOF
 
+yum install mongo-10gen mongo-10gen-server
 
+service mongod start
+chkconfig mongod on
 
+pip install pymongo 
+pip install mongoengine 
 
+################  end    ######################
 cd /root/redis
 cd /root/redis/redis-2.6.0
 make
