--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -75,7 +75,7 @@ gpgcheck=0
 enabled=1
 EOF
 
-yum install mongo-10gen mongo-10gen-server
+yum -y install mongo-10gen mongo-10gen-server
 
 service mongod start
 chkconfig mongod on
