--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -159,7 +159,20 @@ bzip2 -dc parallel-20130222.tar.bz2 | tar xvf -
 cd parallel-20130222
 ./configure --prefix=$HOME && make && make install
 ########### end ##################################
- 
+
+
+############## install iftop#####################
+yum -y install flex byacc  libpcap ncurses ncurses-devel libpcap-devel
+wget http://www.ex-parrot.com/~pdw/iftop/download/iftop-0.17.tar.gz
+tar -xvf iftop-0.17.tar.gz
+cd iftop-0.17
+./configure
+make
+make install
+
+iftop -i eth1
+########### end ##################################
+
 
 yum install mysql
 yum install mysql-server
