--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -56,6 +56,8 @@ easy_install pip
 pip install -U distribute
 pip install setuptools --no-use-wheel --upgrade
 
+pip install --upgrade setuptools
+
 pip install ipython
 easy_install django
 #pip install Pinax
