--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -84,6 +84,8 @@ yum -y install python-setuptools
 
 easy_install pip
 # if needed
+pip install -i http://pypi.douban.com/simple  paramiko
+
 pip install -U distribute
 pip install setuptools --no-use-wheel --upgrade
 
@@ -135,22 +137,28 @@ service redis start
 #source /root/.bash_profile
 yum -y install java-1.7.0-openjdk java-1.7.0-openjdk-devel ldapjdk
 yum -y install gcc libxml2-devel libxslt-devel cyrus-sasl-devel cyrus-sasl-gssapi mysql-devel python-devel python-setuptools python-simplejson sqlite-devel ant openldap openldap-devel openldap-python
-mvn -version
 
 wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
-yum install apache-maven
-mkdir /usr/share/apache-maven/conf/logging/
-cat > /usr/share/apache-maven/conf/logging/simplelogger.properties <<EOF 
-org.slf4j.simpleLogger.defaultLogLevel=info
-org.slf4j.simpleLogger.showDateTime=false
-org.slf4j.simpleLogger.showThreadName=false
-org.slf4j.simpleLogger.showLogName=false
-org.slf4j.simpleLogger.logFile=System.out
-org.slf4j.simpleLogger.levelInBrackets=true
-org.slf4j.simpleLogger.log.Sisu=info
-org.slf4j.simpleLogger.warnLevelString=WARNING
+yum -y install apache-maven
+mvn -version
+#if need, modified /root/hue/maven/pom.xml, make java version suit ,eg change 1.7 to 1.6
+#    <javaVersion>1.7</javaVersion>
+#    <sourceJavaVersion>1.7</sourceJavaVersion>
+#    <targetJavaVersion>1.7</targetJavaVersion>
 
-EOF
+
+#mkdir /usr/share/apache-maven/conf/logging/
+#cat > /usr/share/apache-maven/conf/logging/simplelogger.properties <<EOF 
+#org.slf4j.simpleLogger.defaultLogLevel=info
+#org.slf4j.simpleLogger.showDateTime=false
+#org.slf4j.simpleLogger.showThreadName=false
+#org.slf4j.simpleLogger.showLogName=false
+#org.slf4j.simpleLogger.logFile=System.out
+#org.slf4j.simpleLogger.levelInBrackets=true
+#org.slf4j.simpleLogger.log.Sisu=info
+#org.slf4j.simpleLogger.warnLevelString=WARNING
+#
+#EOF
 ############ Installing rdbtools #########################
 pip install rdbtools
 
@@ -379,32 +387,7 @@ git push origin master
 #git remote set-url origin https://yxxiwang@bitbucket.org/yxxiwang/wang.git
 git clone https://yxxiwang@bitbucket.org/yxxiwang/wang.git
 
-
-
-
-
-
- 1,channelsbygroup接口支持多个groupid,
- 2,给所有*的频道增加一个tag,定时清理没有tag的频道
- 
- vrmp
- 无线局域网适配器 无线网络连接:
-
-   连接特定的 DNS 后缀 . . . . . . . :
-   描述. . . . . . . . . . . . . . . : 11b/g/n  Wireless LAN Mini-PCI Express Adapter II
-   物理地址. . . . . . . . . . . . . : 68-A3-C4-3A-F5-92
-   DHCP 已启用 . . . . . . . . . . . : 是
-   自动配置已启用. . . . . . . . . . : 是
-   本地链接 IPv6 地址. . . . . . . . : fe80::4d8f:aec3:9366:f3a5%10(首选)
-   IPv4 地址 . . . . . . . . . . . . : 172.31.117.111(首选)
-   子网掩码  . . . . . . . . . . . . : 255.255.255.0
-   获得租约的时间  . . . . . . . . . : 2014年1月8日 9:45:31
-   租约过期的时间  . . . . . . . . . : 2014年1月8日 15:45:32
-   默认网关. . . . . . . . . . . . . : 172.31.117.10
-   DHCP 服务器 . . . . . . . . . . . : 172.31.117.10
-   DHCPv6 IAID . . . . . . . . . . . : 241738692
-   DHCPv6 客户端 DUID  . . . . . . . : 00-01-00-01-17-92-F9-1B-68-A3-C4-3A-F5-92
-   DNS 服务器  . . . . . . . . . . . : 114.114.114.114
-                                       8.8.8.8
-   主 WINS 服务器  . . . . . . . . . : 172.31.117.10
-   TCPIP 上的 NetBIOS  . . . . . . . : 已启用
+############################# pydoop install ###############################
+yum -y install boost boost-devel boost*
+pip install importlib
+pip install pydoop
