--- a/wangxi/install.txt
+++ b/wangxi/install.txt
@@ -140,6 +140,8 @@ service redis start
 #EOF
 #source /root/.bash_profile
 yum -y install java-1.7.0-openjdk java-1.7.0-openjdk-devel ldapjdk
+echo "export JAVA_HOME=/usr/lib/jvm/java" >> /etc/profile
+
 yum -y install gcc libxml2-devel libxslt-devel cyrus-sasl-devel cyrus-sasl-gssapi mysql-devel python-devel python-setuptools python-simplejson sqlite-devel ant openldap openldap-devel openldap-python
 
 wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
